--- a/src/api_server/Cargo.toml
+++ b/src/api_server/Cargo.toml
@@ -12,7 +12,11 @@ serde_derive = ">=1.0.27"
 serde_json = ">=1.0.9"
 
 logger = { path = "../logger" }
+  <<<<<<< feature/uffd-on-snaps-response
+micro_http = { git = "https://github.com/acatangiu/micro-http", branch = "respond-with-ancillary" }
+  =======
 micro_http = { git = "https://github.com/firecracker-microvm/micro-http", rev = "0a58eb1" }
+  >>>>>>> main
 mmds = { path = "../mmds" }
 seccompiler = { path = "../seccompiler" }
 utils = { path = "../utils" }
