--- a/src/dumbo/Cargo.toml
+++ b/src/dumbo/Cargo.toml
@@ -9,8 +9,12 @@ license = "Apache-2.0"
 bitflags = ">=1.0.4"
 
 logger = { path = "../logger" }
+  <<<<<<< feature/uffd-on-snaps-response
+micro_http = { git = "https://github.com/acatangiu/micro-http", branch = "respond-with-ancillary" }
+  =======
 micro_http = { git = "https://github.com/firecracker-microvm/micro-http", rev = "0a58eb1" }
 utils = { path = "../utils" }
+  >>>>>>> main
 
 [dev-dependencies]
 serde_json = ">=1.0.9"
