--- a/src/mmds/Cargo.toml
+++ b/src/mmds/Cargo.toml
@@ -17,6 +17,11 @@ versionize_derive = ">=0.1.3"
 
 dumbo = { path = "../dumbo" }
 logger = { path = "../logger" }
+  <<<<<<< feature/uffd-on-snaps-response
+micro_http = { git = "https://github.com/acatangiu/micro-http", branch = "respond-with-ancillary" }
+utils = { path = "../utils" }
+  =======
 micro_http = { git = "https://github.com/firecracker-microvm/micro-http", rev = "0a58eb1" }
+  >>>>>>> main
 snapshot = { path = "../snapshot" }
 utils = { path = "../utils" }
