--- a/src/io_uring/Cargo.toml
+++ b/src/io_uring/Cargo.toml
@@ -8,7 +8,11 @@ license = "Apache-2.0"
 [dependencies]
 libc = ">=0.2.103"
 utils = { path = "../utils" }
+  <<<<<<< feature/io_uring
+vm-memory = { version = "0.7.0", features = ["backend-mmap"] }
+  =======
 vm-memory = { path="../vm-memory" }
+  >>>>>>> main
 
 [dev-dependencies]
 proptest = { version = ">=1.0.0", default-features = false, features = ["std"] }
